<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="@android:color/white"
    tools:context=".onboarding.OnBoardingFragment">

    <ImageView
        android:id="@+id/iv_on_boarding"
        android:layout_width="262dp"
        android:layout_height="219dp"
        android:layout_marginTop="140dp"
        android:src="@drawable/first_on_boarding"
        android:contentDescription="@string/text_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_desc_on_boarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/text_discuss_together"
        android:textColor="@color/colorTextBoarding"
        android:textSize="@dimen/_24sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_on_boarding"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/iv_on_boarding"
        app:layout_constraintTop_toBottomOf="@+id/iv_on_boarding" />

    <TextView
        android:id="@+id/tv_sub_desc_on_boarding"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_horizontal"
        android:text="@string/first_sub_desc_on_boarding"
        android:textSize="@dimen/_12sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_on_boarding"
        app:layout_constraintStart_toStartOf="@+id/iv_on_boarding"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_on_boarding" />

</androidx.constraintlayout.widget.ConstraintLayout>