<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.OnBoardingActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_on_boarding"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginBottom="15dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_on_boarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_on_boarding"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_on_boarding"
        android:fontFamily="@font/poppins_regular"
        android:foregroundGravity="center"
        android:gravity="center"
        android:shadowRadius="5"
        android:text="@string/text_get_started"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:foregroundGravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_skip_on_boarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_regular"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/text_skip"
            android:textAllCaps="false"
            android:textColor="@color/colorSkip"
            android:textSize="@dimen/_15sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_indicator_on_boarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="bottom|center_horizontal"
            android:paddingLeft="@dimen/_4dp"
            android:paddingRight="@dimen/_4dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_skip_on_boarding"
            app:layout_constraintEnd_toStartOf="@+id/btn_next_on_boarding"
            app:layout_constraintStart_toEndOf="@+id/btn_skip_on_boarding"
            app:layout_constraintTop_toTopOf="@+id/btn_skip_on_boarding"
            app:layout_constraintVertical_bias="0.0"
            app:tabBackground="@drawable/indicator_selector"
            app:tabIndicatorColor="@android:color/white" />

        <Button
            android:id="@+id/btn_next_on_boarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/text_next"
            android:textAllCaps="false"
            android:textColor="@color/colorNext"
            android:textSize="@dimen/_15sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_skip_on_boarding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_skip_on_boarding"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>